page contact ok

--- a/templates/bodyHome.html.twig
+++ b/templates/bodyHome.html.twig
@@ -438,7 +438,7 @@
 						<i class="fa fa-industry mb-2"></i>
 						<div class="trending-topic-content">
 							<h4 class="mb-1">
-								<a href="grid-leftfilter.html">Industrail</a>
+								<a href="grid-leftfilter.html">Terrains Agricole</a>
 							</h4>
 							<span>18 Properties</span>
 						</div>
@@ -449,7 +449,7 @@
 						<i class="fa fa-dumpster mb-2"></i>
 						<div class="trending-topic-content">
 							<h4 class="mb-1">
-								<a href="grid-leftfilter.html">Commercial</a>
+								<a href="grid-leftfilter.html">Prairie</a>
 							</h4>
 							<span>36 Properties</span>
 						</div>
@@ -460,7 +460,7 @@
 						<i class="fa fa-building mb-2"></i>
 						<div class="trending-topic-content">
 							<h4 class="mb-1">
-								<a href="grid-leftfilter.html">Buildings</a>
+								<a href="grid-leftfilter.html">Batiments</a>
 							</h4>
 							<span>58 Properties</span>
 						</div>
@@ -471,7 +471,7 @@
 						<i class="fa fa-home mb-2"></i>
 						<div class="trending-topic-content">
 							<h4 class="mb-1">
-								<a href="grid-leftfilter.html">Home & Villas</a>
+								<a href="grid-leftfilter.html">Bois</a>
 							</h4>
 							<span>45 Properties</span>
 						</div>
@@ -482,7 +482,7 @@
 						<i class="fa fa-warehouse mb-2"></i>
 						<div class="trending-topic-content">
 							<h4 class="mb-1">
-								<a href="grid-leftfilter.html">Garages</a>
+								<a href="grid-leftfilter.html">Exploitation</a>
 							</h4>
 							<span>31 Properties</span>
 						</div>
