--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -50,55 +50,56 @@
 								<a href="about.html">A PROPOS DE NOUS</a>
 							</li>
 							<li class="submenu dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Listing
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories
 									<i class="icon-arrow-down" aria-hidden="true"></i>
 								</a>
-								<ul class="dropdown-menu">
+								<ul
+									class="dropdown-menu">
+									<!--	<li class="submenu dropdown">
+																																																																																																																																																																			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Listing List<i class="fa fa-angle-right" aria-hidden="true"></i>
+																																																																																																																																																																			</a>
+																																																																																																																																																																			<ul class="dropdown-menu">
+																																																																																																																																																																				<li>
+																																																																																																																																																																					<a href="listing-leftfilter.html">Listing Left Filter</a>
+																																																																																																																																																																				</li>
+																																																																																																																																																																				<li>
+																																																																																																																																																																					<a href="listing-rightfilter.html">Listing Right Filter</a>
+																																																																																																																																																																				</li>
+																																																																																																																																																																				<li>
+																																																																																																																																																																					<a href="listing-fullwidth.html">Listing Fullwidth</a>
+																																																																																																																																																																				</li>
+																																																																																																																																																																			</ul>
+																																																																																																																																																																		</li> -->
 									<li class="submenu dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Listing List<i class="fa fa-angle-right" aria-hidden="true"></i>
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories List<i class="fa fa-angle-right" aria-hidden="true"></i>
 										</a>
 										<ul class="dropdown-menu">
 											<li>
-												<a href="listing-leftfilter.html">Listing Left Filter</a>
+												<a href="{{path('app_categories_terrain')}}">TERRRAIN AGRICOLE</a>
 											</li>
 											<li>
-												<a href="listing-rightfilter.html">Listing Right Filter</a>
+												<a href="{{path('app_categories_prairie')}}">PRAIRIE</a>
 											</li>
 											<li>
-												<a href="listing-fullwidth.html">Listing Fullwidth</a>
+												<a href="{{path('app_categories_bois')}}">BOIS</a>
+												<!--Pas encore ajouter dans le controller-->
+											</li>
+											<li>
+												<a href="{{path('app_categorie_batiments')}}">BATIMENTS</a>
+											</li>
+											<li>
+												<a href="{{path('app_categories_exploitations')}}">EXPLOITATION</a>
+											</li>
+											<!--	<li>
+																							<a href="grid-rightfilter.html">Grid Right Filter</a>
+																						</li>
+																						-->
+											<li>
+												<a href="{{path('app_categories')}}">Full categories</a>
 											</li>
 										</ul>
 									</li>
-									<li class="submenu dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Listing Grid<i class="fa fa-angle-right" aria-hidden="true"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li>
-												<a href="grid-leftfilter.html">Grid Left Filter</a>
-											</li>
-											<li>
-												<a href="grid-rightfilter.html">Grid Right Filter</a>
-											</li>
-											<li>
-												<a href="grid-fullwidth.html">Grid Fullwidth</a>
-											</li>
-										</ul>
-									</li>
-									<li class="submenu dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Listing Single<i class="fa fa-angle-right" aria-hidden="true"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li>
-												<a href="detail-leftside.html">Single Leftside</a>
-											</li>
-											<li>
-												<a href="detail-rightside.html">Single Rightside</a>
-											</li>
-											<li>
-												<a href="detail-fullwidth.html">Single Fullwidth</a>
-											</li>
-										</ul>
-									</li>
+
 								</ul>
 							</li>
 							<li class="submenu dropdown">
@@ -106,21 +107,7 @@
 									<i class="icon-arrow-down" aria-hidden="true"></i>
 								</a>
 								<ul class="dropdown-menu">
-									<li class="submenu dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Agent<i class="fa fa-angle-right" aria-hidden="true"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li>
-												<a href="agent1.html">Agent Grid</a>
-											</li>
-											<li>
-												<a href="agent.html">Agent List</a>
-											</li>
-											<li>
-												<a href="agent-detail.html">Agent Detail</a>
-											</li>
-										</ul>
-									</li>
+
 									<li class="submenu dropdown">
 										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Agency<i class="fa fa-angle-right" aria-hidden="true"></i>
 										</a>
@@ -131,23 +118,10 @@
 											<li>
 												<a href="agencies1.html">Agency List</a>
 											</li>
-											<li>
-												<a href="agency-detail.html">Agency Detail</a>
-											</li>
+
 										</ul>
 									</li>
-									<li class="submenu dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services<i class="fa fa-angle-right" aria-hidden="true"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li>
-												<a href="services.html">Services Lists</a>
-											</li>
-											<li>
-												<a href="services-detail.html">Service Detail</a>
-											</li>
-										</ul>
-									</li>
+
 									<li class="submenu dropdown">
 										<a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gallery<i class="fa fa-angle-right" aria-hidden="true"></i>
 										</a>
@@ -160,192 +134,114 @@
 											</li>
 										</ul>
 									</li>
-									<li class="submenu dropdown">
-										<a href="404.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Error<i class="fa fa-angle-right" aria-hidden="true"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li>
-												<a href="404.html">Error Page 1</a>
-											</li>
-											<li>
-												<a href="404-1.html">Error Page 2</a>
-											</li>
-										</ul>
-									</li>
+
+
 									<li>
-										<a href="login.html">Login</a>
+										<a href="{{path('app_faq')}}">Faq</a>
 									</li>
-									<li>
-										<a href="register.html">Register</a>
-									</li>
-									<li>
-										<a href="comingsoon.html">Coming Soon</a>
-									</li>
-									<li>
-										<a href="faq.html">Faq</a>
-									</li>
-									<li>
-										<a href="contact.html">Contact Us</a>
-									</li>
-									<li class="submenu dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dashboard<i class="fa fa-angle-right" aria-hidden="true"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li>
-												<a href="dashboard.html">Dashboard</a>
-											</li>
-											<li>
-												<a href="dashboard-my-profile.html">User Profile</a>
-											</li>
-											<li>
-												<a href="dashboard-messages.html">User Messages</a>
-											</li>
-											<li>
-												<a href="dashboard-add-new.html">Add New</a>
-											</li>
-											<li>
-												<a href="dashboard-list.html">Listing</a>
-											</li>
-											<li>
-												<a href="dashboard-list.html">User Wishlist</a>
-											</li>
-											<li>
-												<a href="dashboard-history.html">History</a>
-											</li>
-											<li>
-												<a href="dashboard-reviews.html">Reviews</a>
-											</li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li class="submenu dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog
-									<i class="icon-arrow-down" aria-hidden="true"></i>
-								</a>
-								<ul class="dropdown-menu">
-									<li class="submenu dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog Grid<i class="fa fa-angle-right" aria-hidden="true"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li>
-												<a href="post-grid-1.html">Blog Grid 1</a>
-											</li>
-											<li>
-												<a href="post-grid-2.html">Blog Grid 2</a>
-											</li>
-											<li>
-												<a href="post-grid-3.html">Blog Grid 3</a>
-											</li>
-										</ul>
-									</li>
-									<li class="submenu dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog List<i class="fa fa-angle-right" aria-hidden="true"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li>
-												<a href="post-list-1.html">Blog List 1</a>
-											</li>
-											<li>
-												<a href="post-list-2.html">Blog List 2</a>
-											</li>
-											<li>
-												<a href="post-list-3.html">Blog List 3</a>
-											</li>
-										</ul>
-									</li>
-									<li class="submenu dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog Single<i class="fa fa-angle-right" aria-hidden="true"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li>
-												<a href="detail-1.html">Blog Single 1</a>
-											</li>
-											<li>
-												<a href="detail-2.html">Blog Single 2</a>
-											</li>
-											<li>
-												<a href="detail-3.html">Blog Single 3</a>
-											</li>
-										</ul>
-									</li>
+
+									<!--<li class="submenu dropdown">
+																																																	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dashboard<i class="fa fa-angle-right" aria-hidden="true"></i>
+																																																	</a>
+																																																	<ul class="dropdown-menu">
+																																																		<li>
+																																																			<a href="dashboard.html">Dashboard</a>
+																																																		</li>
+																																																		<li>
+																																																			<a href="dashboard-my-profile.html">User Profile</a>
+																																																		</li>
+																																																		<li>
+																																																			<a href="dashboard-messages.html">User Messages</a>
+																																																		</li>
+																																																		<li>
+																																																			<a href="dashboard-add-new.html">Add New</a>
+																																																		</li>
+																																																		<li>
+																																																			<a href="dashboard-list.html">Listing</a>
+																																																		</li>
+																																																		<li>
+																																																			<a href="dashboard-list.html">User Wishlist</a>
+																																																		</li>
+																																																		<li>
+																																																			<a href="dashboard-history.html">History</a>
+																																																		</li>
+																																																		<li>
+																																																			<a href="dashboard-reviews.html">Reviews</a>
+																																																		</li>
+																																																	</ul>
+																																																</li>-->
 								</ul>
 							</li>
 							<li>
-								<a href="contact.html">Contact Us</a>
+								<a href="{{path('app_contact')}}">Contact Us</a>
 							</li>
-							<li class="search-main">
-								<a href="#search1" class="mt_search">
-									<i class="fa fa-search"></i>
-								</a>
-							</li>
-						</ul>
-					</div>
-					<!-- /.navbar-collapse -->
-					<div class="register-login d-flex align-items-center">
-						<a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" class="me-2 white">
-							<i class="fa fa-user"></i>
-							Login/Register
-						</a>
-						<div class="header_sidemenu me-3">
-							<div class="mhead">
-								<span class="menu-ham">
-									<a href="#" class="cart-icon d-flex align-items-center ms-1">
-										<i class="fa fa-th-large fs-5 black bg-grey p-2"></i>
-									</a>
-								</span>
-							</div>
 						</div>
-						<a href="#" class="nir-btn white">Add Listing</a>
-					</div>
 
-					<div id="slicknav-mobile"></div>
-				</div>
-			</div>
-			<!-- /.container-fluid -->
-		</nav>
-	</div>
-	<!-- Navigation Bar Ends -->
-</header>
-<!-- header ends -->
+						<!-- /.navbar-collapse -->
+						<div class="register-login d-flex align-items-center">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" class="me-2 white">
+								<i class="fa fa-user"></i>
+								Login/Register
+							</a>
+							<div class="header_sidemenu me-3">
+								<div class="mhead">
+									<span class="menu-ham">
+										<a href="#" class="cart-icon d-flex align-items-center ms-1">
+											<i class="fa fa-th-large fs-5 black bg-grey p-2"></i>
+										</a>
+									</span>
+								</div>
+							</div>
+							<a href="#" class="nir-btn white">Add Listing</a>
+						</div>
 
-<!-- header side menu -->
-<div class="header_sidemenu">
-	<div class="header_sidemenu_in">
-		<div class="menu py-5 px-4">
-			<div class="close-menu">
-				<i class="fa fa-times"></i>
-			</div>
-			<div class="m-contentmain">
-				<div class="m-contentmain">
-					<div class="m-logo mb-5">
-						<img src="images/logo.png" alt="m-logo">
-					</div>
-
-					<div class="content-box mb-5">
-						<h3 class="">Get In Touch</h3>
-						<p class="mb-2">We must explain to you how all seds this mistakens idea off denouncing pleasures and praising pain was born and I will give you a completed accounts..</p>
-						<a href="#" class="nir-btn">Consultation</a>
-					</div>
-
-					<div class="contact-info1">
-						<h3 class="">Contact Info</h3>
-						<ul>
-							<li class="d-block mb-1">
-								<i class="fa fa-map-marker-alt me-2"></i>
-								Brozon Mall 26, Newyrok NY 10005</li>
-							<li class="d-block mb-1">
-								<i class="fa fa-phone-alt me-2"></i>555 626-0234</li>
-							<li class="d-block mb-1">
-								<i class="fa fa-envelope-open me-2"></i>support@realshield.com</li>
-							<li class="d-block">
-								<i class="fa fa-clock me-2"></i>
-								Open Time: 09.00 to 18.00</li>
-						</ul>
+						<div id="slicknav-mobile"></div>
 					</div>
 				</div>
-			</div>
+				<!-- /.container-fluid -->
+			</nav>
 		</div>
-		<div class="overlay hide"></div>
+		<!-- Navigation Bar Ends -->
+	</header>
+	<!-- header ends -->
+
+	<!-- header side menu -->
+	<div class="header_sidemenu">
+		<div class="header_sidemenu_in">
+			<div class="menu py-5 px-4">
+				<div class="close-menu">
+					<i class="fa fa-times"></i>
+				</div>
+				<div class="m-contentmain">
+					<div class="m-contentmain">
+						<div class="m-logo mb-5">
+							<img src="images/logo.png" alt="m-logo">
+						</div>
+
+						<div class="content-box mb-5">
+							<h3 class="">Get In Touch</h3>
+							<p class="mb-2">We must explain to you how all seds this mistakens idea off denouncing pleasures and praising pain was born and I will give you a completed accounts..</p>
+							<a href="#" class="nir-btn">Consultation</a>
+						</div>
+
+						<div class="contact-info1">
+							<h3 class="">Contact Info</h3>
+							<ul>
+								<li class="d-block mb-1">
+									<i class="fa fa-map-marker-alt me-2"></i>
+									Brozon Mall 26, Newyrok NY 10005</li>
+								<li class="d-block mb-1">
+									<i class="fa fa-phone-alt me-2"></i>555 626-0234</li>
+								<li class="d-block mb-1">
+									<i class="fa fa-envelope-open me-2"></i>support@realshield.com</li>
+								<li class="d-block">
+									<i class="fa fa-clock me-2"></i>
+									Open Time: 09.00 to 18.00</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="overlay hide"></div>
+		</div>
 	</div>
-</div>
