affichage des biens ok

--- a/templates/afficher_bien/index.html.twig
+++ b/templates/afficher_bien/index.html.twig
@@ -7,18 +7,19 @@
 	<!-- BreadCrumb Starts -->
 	<section class="breadcrumb-main pb-0 pt-20" style="background-image: url(images/bg/bg2.jpg);">
 		<div class="breadcrumb-outer">
-			<div class="container">
-				<div class="breadcrumb-content d-md-flex align-items-center pt-6">
-					<h1 class="mb-0">Listing With Fullwidth</h1>
-					<nav aria-label="breadcrumb">
-						<ul class="breadcrumb">
-							<li class="breadcrumb-item">
-								<a href="#">Home</a>
-							</li>
-							<li class="breadcrumb-item active" aria-current="page">Listing With Fullwidth</li>
-						</ul>
-					</nav>
-				</div>
+			<div
+				class="container"><!--	<div class="breadcrumb-content d-md-flex align-items-center pt-6">
+															<h1 class="mb-0">Listing With Fullwidth</h1>
+															<nav aria-label="breadcrumb">
+																<ul class="breadcrumb">
+																	<li class="breadcrumb-item">
+																		<a href="#">Home</a>
+																	</li>
+																	<li class="breadcrumb-item active" aria-current="page">Listing With Fullwidth</li>
+																</ul>
+															</nav>
+														</div>
+														-->
 			</div>
 		</div>
 		<div class="dot-overlay"></div>
@@ -110,318 +111,59 @@
 							</div>
 						</div>
 					</div>
-					<div class="blog-full mb-4 border-b pb-4">
-						<div class="row">
-							<div class="col-lg-5 col-md-4">
-								<div class="blog-image">
-									<a href="#" style="background-image: url(images/trending/trending1.jpg);"></a>
-								</div>
-							</div>
-							<div class="col-lg-7 col-md-8">
-								<div class="blog-content">
-									<h5 class="theme mb-2">Villa</h5>
 
-									<h3 class="mb-2">
-										<a href="#" class="">7012 Shine Sehu Street, Liverpool London, LC345AC</a>
-									</h3>
-									<div class="d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-price">
-											Start From<span class="d-block theme fw-bold">$63,000.00</span>
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-									<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-										<li class="me-2">
-											<i class="fa fa-eye"></i>
-											3 Beds</li>
-										<li class="me-2">
-											<i class="fa fa-heart"></i>
-											2 Baths</li>
-										<li>
-											<i class="fa fa-comments"></i>
-											600 Sq Ft</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
+					<!--liste des biens -->
+					{% for bien in bienImmob %}
+						<bien>
 
-					<div class="blog-full mb-4 border-b pb-4">
-						<div class="row">
-							<div class="col-lg-5 col-md-4">
-								<div class="blog-image">
-									<a href="#" style="background-image: url(images/trending/trending5.jpg);"></a>
-								</div>
-							</div>
-							<div class="col-lg-7 col-md-8">
-								<div class="blog-content">
-									<h5 class="theme mb-2">Flat</h5>
-									<h4>
-										<a href="detail-rightside.html">7012 Shine Sehu Street, Liverpool, LC345AC</a>
-									</h4>
-									<div class="d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-price">
-											Start From<span class="d-block theme fw-bold">$28,000.00</span>
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
+							<div class="blog-full mb-4 border-b pb-4">
+								<div class="row">
+									<div class="col-lg-5 col-md-4">
+										<div class="blog-image">
+											<a href="#" style="background-image: url(images/trending/trending1.jpg);"></a>
 										</div>
 									</div>
-									<p class="mb-2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-									<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-										<li class="me-2">
-											<i class="fa fa-eye"></i>
-											3 Beds</li>
-										<li class="me-2">
-											<i class="fa fa-heart"></i>
-											2 Baths</li>
-										<li>
-											<i class="fa fa-comments"></i>
-											600 Sq Ft</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
+									<div class="col-lg-7 col-md-8">
+										<div class="blog-content">
+											<h5 class="theme mb-2">{{bien.titre}}</h5>
 
-					<div class="blog-full mb-4 border-b pb-4">
-						<div class="row">
-							<div class="col-lg-5 col-md-4">
-								<div class="blog-image">
-									<a href="#" style="background-image: url(images/trending/trending5.jpg);"></a>
-								</div>
-							</div>
-							<div class="col-lg-7 col-md-8">
-								<div class="blog-content">
-									<h5 class="theme mb-2">Flat</h5>
-									<h4>
-										<a href="detail-rightside.html">7012 Shine Sehu Street, Liverpool, LC345AC</a>
-									</h4>
-									<div class="d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-price">
-											Start From<span class="d-block theme fw-bold">$28,000.00</span>
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
+											<h3 class="mb-2">
+												<a href="#" class="">{{bien.description}}</a>
+											</h3>
+											<div class="d-flex align-items-center justify-content-between border-b pb-1 mb-2">
+												<div class="entry-price">
+													Start From<span class="d-block theme fw-bold">{{bien.prix}}€</span>
+												</div>
+												<div class="entry-metalist d-flex align-items-center">
+													<ul>
+														<li class="me-2">
+															<i class="fa fa-eye"></i>
+														</li>
+														<li class="me-2">
+															<i class="fa fa-heart"></i>
+														</li>
+													</ul>
+												</div>
+											</div>
+											<p class="mb-2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+											<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
 												<li class="me-2">
 													<i class="fa fa-eye"></i>
-												</li>
+													3 Beds</li>
 												<li class="me-2">
 													<i class="fa fa-heart"></i>
-												</li>
+													2 Baths</li>
+												<li>
+													<i class="fa fa-comments"></i>
+													600 Sq Ft</li>
 											</ul>
 										</div>
 									</div>
-									<p class="mb-2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-									<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-										<li class="me-2">
-											<i class="fa fa-eye"></i>
-											3 Beds</li>
-										<li class="me-2">
-											<i class="fa fa-heart"></i>
-											2 Baths</li>
-										<li>
-											<i class="fa fa-comments"></i>
-											600 Sq Ft</li>
-									</ul>
 								</div>
 							</div>
-						</div>
-					</div>
+						</bien>
+					{% endfor %}
 
-					<div class="blog-full mb-4 border-b pb-4">
-						<div class="row">
-							<div class="col-lg-5 col-md-4">
-								<div class="blog-image">
-									<a href="#" style="background-image: url(images/trending/trending7.jpg);"></a>
-								</div>
-							</div>
-							<div class="col-lg-7 col-md-8">
-								<div class="blog-content">
-									<h5 class="theme mb-2">Flat</h5>
-									<h4>
-										<a href="detail-rightside.html">425 Vine 012 Street, Montreal Canada, UHW45Q</a>
-									</h4>
-									<div class="d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-price">
-											Start From<span class="d-block theme fw-bold">$31,000.00</span>
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-									<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-										<li class="me-2">
-											<i class="fa fa-eye"></i>
-											3 Beds</li>
-										<li class="me-2">
-											<i class="fa fa-heart"></i>
-											2 Baths</li>
-										<li>
-											<i class="fa fa-comments"></i>
-											600 Sq Ft</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="blog-full mb-4 border-b pb-4">
-						<div class="row">
-							<div class="col-lg-5 col-md-4">
-								<div class="blog-image">
-									<a href="#" style="background-image: url(images/trending/trending5.jpg);"></a>
-								</div>
-							</div>
-							<div class="col-lg-7 col-md-8">
-								<div class="blog-content">
-									<h5 class="theme mb-2">Villa</h5>
-									<h4>
-										<a href="detail-rightside.html">1244 Vansh Market, Mise Mizkel Australia, AU456HA</a>
-									</h4>
-									<div class="d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-price">
-											Start From<span class="d-block theme fw-bold">$48,000.00</span>
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-									<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-										<li class="me-2">
-											<i class="fa fa-eye"></i>
-											3 Beds</li>
-										<li class="me-2">
-											<i class="fa fa-heart"></i>
-											2 Baths</li>
-										<li>
-											<i class="fa fa-comments"></i>
-											600 Sq Ft</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="blog-full mb-4 border-b pb-4">
-						<div class="row">
-							<div class="col-lg-5 col-md-4">
-								<div class="blog-image">
-									<a href="#" style="background-image: url(images/trending/trending8.jpg);"></a>
-								</div>
-							</div>
-							<div class="col-lg-7 col-md-8">
-								<div class="blog-content">
-									<h5 class="theme mb-2">Villa</h5>
-									<h4>
-										<a href="detail-rightside.html">1244 Vansh Market, Mise Mizkel Australia, AU456HA</a>
-									</h4>
-									<div class="d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-price">
-											Start From<span class="d-block theme fw-bold">$48,000.00</span>
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-									<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-										<li class="me-2">
-											<i class="fa fa-eye"></i>
-											3 Beds</li>
-										<li class="me-2">
-											<i class="fa fa-heart"></i>
-											2 Baths</li>
-										<li>
-											<i class="fa fa-comments"></i>
-											600 Sq Ft</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="blog-full mb-4 border-b pb-4">
-						<div class="row">
-							<div class="col-lg-5 col-md-4">
-								<div class="blog-image">
-									<a href="#" style="background-image: url(images/trending/trending6.jpg);"></a>
-								</div>
-							</div>
-							<div class="col-lg-7 col-md-8">
-								<div class="blog-content">
-									<h5 class="theme mb-2">Flat</h5>
-									<h4>
-										<a href="detail-rightside.html">425 Vine 012 Street, Montreal Canada, UHW45Q</a>
-									</h4>
-									<div class="d-flex align-items-center justify-content-between border-b pb-1 mb-2">
-										<div class="entry-price">
-											Start From<span class="d-block theme fw-bold">$32,000.00</span>
-										</div>
-										<div class="entry-metalist d-flex align-items-center">
-											<ul>
-												<li class="me-2">
-													<i class="fa fa-eye"></i>
-												</li>
-												<li class="me-2">
-													<i class="fa fa-heart"></i>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<p class="mb-2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-									<ul class="d-flex align-items-center justify-content-between bg-grey p-3 px-4">
-										<li class="me-2">
-											<i class="fa fa-eye"></i>
-											3 Beds</li>
-										<li class="me-2">
-											<i class="fa fa-heart"></i>
-											2 Baths</li>
-										<li>
-											<i class="fa fa-comments"></i>
-											600 Sq Ft</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
 
 					<div class="pagination-main text-center">
 						<ul class="pagination">
