--- a/templates/afficher_bien/index.html.twig
+++ b/templates/afficher_bien/index.html.twig
@@ -6,21 +6,21 @@
 
 	<!-- BreadCrumb Starts -->
 	<section class="breadcrumb-main pb-0 pt-20" style="background-image: url(images/bg/bg2.jpg);">
-		<div class="breadcrumb-outer">
-			<div
-				class="container"><!--	<div class="breadcrumb-content d-md-flex align-items-center pt-6">
-															<h1 class="mb-0">Listing With Fullwidth</h1>
-															<nav aria-label="breadcrumb">
-																<ul class="breadcrumb">
-																	<li class="breadcrumb-item">
-																		<a href="#">Home</a>
-																	</li>
-																	<li class="breadcrumb-item active" aria-current="page">Listing With Fullwidth</li>
-																</ul>
-															</nav>
-														</div>
-														-->
-			</div>
+		<div
+			class="breadcrumb-outer"><!--	<div class="container">
+												<div class="breadcrumb-content d-md-flex align-items-center pt-6">
+													<h1 class="mb-0">Listing With Fullwidth</h1>
+													<nav aria-label="breadcrumb">
+														<ul class="breadcrumb">
+															<li class="breadcrumb-item">
+																<a href="#">Home</a>
+															</li>
+															<li class="breadcrumb-item active" aria-current="page">Listing With Fullwidth</li>
+														</ul>
+													</nav>
+												</div>
+											</div>
+											-->
 		</div>
 		<div class="dot-overlay"></div>
 	</section>
@@ -120,7 +120,7 @@
 								<div class="row">
 									<div class="col-lg-5 col-md-4">
 										<div class="blog-image">
-											<a href="#" style="background-image: url(images/trending/trending1.jpg);"></a>
+											<a href="#" style="background-image: url(/images/trending/trending1.jpg);"></a>
 										</div>
 									</div>
 									<div class="col-lg-7 col-md-8">
