--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -62,14 +62,31 @@
 									<p class="mb-0">Fundpress site thoughtfully designed for real humans which means the best user experience for your entire community.</p>
 								</div>
 								<!--formulaire en twig -->
-								<div id="contactform-error-msg"></div>
-								{{ form_start(formcontact) }}
-								{{ form_widget(formcontact) }}
-								<div class="comment-btn text-center">
-									<input type="submit" class="btn btn-success" value="Envoyer Message">
-								</div>
-								{{ form_end(formcontact )}}
 
+
+								{{ form_start(formcontact) }}
+								<div class="form-group mb-2">
+									{{ form_widget(formcontact.nom,{'attr': {'class':'form-control','placeholder':'nom'}}) }}
+								</div>
+								<div class="form-group mb-2">
+									{{ form_widget(formcontact.prenom,{'attr': {'class':'form-control','placeholder':'prenom'}}) }}
+								</div>
+								<div class="form-group mb-2">
+									{{ form_widget(formcontact.mail,{'attr': {'class':'form-control','placeholder':'mail'}}) }}
+								</div>
+								<div class="form-group mb-2">
+									{{ form_widget(formcontact.numero,{'attr': {'class':'form-control','placeholder':'numero'}}) }}
+								</div>
+								<div class="textarea mb-2">
+									{{ form_widget(formcontact.content,{'attr': {'class':'form-control','placeholder':'content'}}) }}
+								</div>
+
+								<div class="comment-btn text-center">
+									<input type="submit" class="nir-btn" id="submit2" value="Send Message">
+								</div>
+
+
+								{{ form_end(formcontact )}}
 
 							</div>
 						</div>
